<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/LightPink"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".second_activity"
    >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"   
        android:gravity="center"
        android:text="@string/login"
        android:textSize="40sp"
        android:textStyle="bold"
        />
   <!-- name  --> 
    <LinearLayout 	
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
  			android:orientation="horizontal"
  			android:background="@drawable/White"
  			android:layout_margin="5sp"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="15sp"
            android:gravity="bottom"
            android:text="@string/name"
            android:background="@drawable/LightPink"
			android:textSize="30sp"
            />
        <EditText 
            android:id="@+id/name_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exp_name"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:cursorVisible="true"
			android:textSize="20sp"

            />
    </LinearLayout>  
   <!-- gender  -->
    <LinearLayout 
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
  			android:orientation="horizontal"
  			android:background="@drawable/White"
  			android:layout_margin="5sp"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="15sp"
            android:gravity="bottom"
            android:text="@string/gender"
            android:background="@drawable/LightPink"
			android:textSize="30sp"
            />
		<Spinner 
		android:id="@+id/genderinput"  
        android:layout_width="wrap_content"  
        android:layout_height="fill_parent"
                         />  
             <!-- age  -->
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="bottom"

            android:text="@string/age"
            android:background="@drawable/LightPink"
			android:textSize="30sp"
            />
        <EditText 
            android:id="@+id/age_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exp_age"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:cursorVisible="true"
			android:textSize="20sp"
            />
    </LinearLayout>

   <!-- height  --> 
    <LinearLayout 
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
  			android:orientation="horizontal"
  			android:background="@drawable/White" 
  			android:layout_margin="5sp"  						
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="15sp"
            android:gravity="bottom"
            android:text="@string/height"
            android:background="@drawable/LightPink"
			android:textSize="30sp"
            />
        <EditText 
            android:id="@+id/heightinput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exp_height"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:cursorVisible="true"
			android:textSize="20sp"
            />


    </LinearLayout>
    <!-- weight  -->
    <LinearLayout 
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
  			android:orientation="horizontal"
  			android:background="@drawable/White" 
  			android:layout_margin="5sp"			
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="15sp"
            android:gravity="bottom"
            android:text="@string/weight"
            android:background="@drawable/LightPink"
			android:textSize="30sp"
            />
        <EditText 
            android:id="@+id/weightinput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exp_weight"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:cursorVisible="true"
			android:textSize="20sp"
            />

    </LinearLayout>
    <!-- phonenumber  -->
    <LinearLayout 
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
  			android:orientation="vertical"
  			android:layout_margin="5sp"  			
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phonenumber"           
			android:textSize="30sp"
            />
          <EditText 
            android:id="@+id/ph_numberinput1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/phonenumber1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:cursorVisible="true"
            android:padding="5sp"
            android:layout_margin="5sp"
            android:background="@drawable/White"
			android:textSize="20sp"
            />
           <EditText 
            android:id="@+id/ph_numberinput2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/phonenumber2"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:cursorVisible="true"
            android:padding="5sp"
            android:layout_margin="5sp"
            android:background="@drawable/White"
			android:textSize="20sp"
            />
    </LinearLayout>

    <Button
      		android:id="@+id/SecA_FirstButton"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/GreenYellow"
            android:layout_gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/ok"
            android:textSize="30sp" />

</LinearLayout>