<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BackGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/LightPink"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".third_activity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/Health"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="5sp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:text="@string/bluetooth"
            android:textSize="25sp" />

        <ToggleButton
            android:id="@+id/tbtnSwitch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp" >
        </ToggleButton>
    </LinearLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/bluetooth_find"
        android:textSize="25sp" >
    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5sp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:text="@string/Instrument"
            android:textSize="25sp" />

        <ListView
            android:id="@+id/lvDevices"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5sp"
            android:background="@drawable/White"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" >
        </ListView>
    </LinearLayout>
    <Button
        android:id="@+id/Signal_Setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:padding="5sp"
        android:text="@string/SignalSetting"
        android:textSize="25sp" >
    </Button>
    <Button
        android:id="@+id/PPG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:padding="5sp"
        android:text="@string/PPG"
        android:textSize="25sp" >
    </Button>

    <Button
        android:id="@+id/Alert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:background="@drawable/Yellow"
        android:padding="5sp"
        android:text="@string/Alert"
        android:textSize="40sp" >
    </Button>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/Red"
        android:padding="5sp"
        android:text="@string/Return"
        android:textSize="25sp" >
    </Button>

</LinearLayout>